workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoProposta__c/BeneficiarioSeguradoProposta__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar os beneficiários da proposta</description>
    <label>Beneficiário do segurado da proposta</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beneficiários dos segurados da proposta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>