workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoProposta__c/fields/BeneficiarioGrauParentescoOutros__c.field-meta.xml
<CustomField>
    <fullName>BeneficiarioGrauParentescoOutros__c</fullName>
    <description>Campo destinado ao armazenamento de outros tipos de grau de parentesco</description>
    <label>Outros</label>
    <length>255</length>
    <type>Text</type>
</CustomField>