workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoProposta__c/fields/CpfPep__c.field-meta.xml
<CustomField>
    <fullName>CpfPep__c</fullName>
    <label>CPF da PEP</label>
    <length>14</length>
    <type>Text</type>
</CustomField>