workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoProposta__c/fields/GrauParentescoPep__c.field-meta.xml
<CustomField>
    <fullName>GrauParentescoPep__c</fullName>
    <label>Grau de parentesco da PEP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GrauParentesco</valueSetName>
    </valueSet>
</CustomField>