workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoProposta__c/fields/ImprimirCertificadoSeguro__c.field-meta.xml
<CustomField>
    <fullName>ImprimirCertificadoSeguro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Imprimir no certificado de seguro?</label>
    <type>Checkbox</type>
</CustomField>