workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoProposta__c/fields/Pep__c.field-meta.xml
<CustomField>
    <fullName>Pep__c</fullName>
    <label>PEP?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>RelacionamentoProximo</fullName>
                <label>Relacionamento próximo</label>
            </value>
            <value>
                <fullName>Nao</fullName>
                <label>Não</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>