workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoProposta__c/fields/PercentualIndenizacao__c.field-meta.xml
<CustomField>
    <fullName>PercentualIndenizacao__c</fullName>
    <label>Percentual Indenização</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>