workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoProposta__c/fields/PropostaMassificado__c.field-meta.xml
<CustomField>
    <fullName>PropostaMassificado__c</fullName>
    <formula>SeguradoProposta__r.GrupoProposta__r.ContratanteProposta__r.Proposta__r.Massificados__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PropostaMassificado</label>
    <type>Checkbox</type>
</CustomField>