workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoProposta__c/fields/SegmentoProposta__c.field-meta.xml
<CustomField>
    <fullName>SegmentoProposta__c</fullName>
    <formula>SeguradoProposta__r.GrupoProposta__r.ContratanteProposta__r.Proposta__r.Segmento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SegmentoProposta</label>
    <type>Text</type>
</CustomField>