workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoProposta__c/fields/SeguradoProposta__c.field-meta.xml
<CustomField>
    <fullName>SeguradoProposta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Segurado da proposta</label>
    <referenceTo>SeguradoProposta__c</referenceTo>
    <relationshipLabel>Beneficiários dos segurados da proposta</relationshipLabel>
    <relationshipName>BeneficiariosSeguradosProposta</relationshipName>
    <type>Lookup</type>
</CustomField>