workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoProposta__c/fields/TipoBeneficiario__c.field-meta.xml
<CustomField>
    <fullName>TipoBeneficiario__c</fullName>
    <label>Tipo de beneficiário</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nome do beneficiário</fullName>
            </value>
            <value>
                <fullName>Herdeiros legais, conforme artigo 792 do código civil.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>