workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoProposta__c/validationRules/ObrigarPreenchimentoInformacoes.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigarPreenchimentoInformacoes</fullName>
    <active>true</active>
    <description>Obriga o preenchimento de nome, cpf, participação e grau de parentesco para o tipo de beneficiário Relacionamento próximo</description>
    <errorConditionFormula>AND( 
ISPICKVAL(Pep__c, &quot;RelacionamentoProximo&quot;), 
OR( 
ISBLANK(Nome__c), 
ISBLANK(Participacao__c), 
ISPICKVAL(GrauParentesco__c,&quot;&quot;) 
) 
)</errorConditionFormula>
    <errorMessage>Para este tipo de beneficiário preencher o nome, cpf, participação e grau de parentesco</errorMessage>
</ValidationRule>