workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoProposta__c/validationRules/ObrigarPreenchimentoInformacoesNome.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigarPreenchimentoInformacoesNome</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL(TipoBeneficiario__c, &quot;Nome do beneficiário&quot;), 
IF(ISBLANK(Nome__c),true, false)
, false)</errorConditionFormula>
    <errorDisplayField>Nome__c</errorDisplayField>
    <errorMessage>Para este tipo de beneficiário preencher o nome</errorMessage>
</ValidationRule>