workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoProposta__c/validationRules/ObrigarPreenchimentoInformacoesPEP.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigarPreenchimentoInformacoesPEP</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Pep__c, &quot;RelacionamentoProximo&quot;),
    OR(
       ISBLANK(NomePessoaPep__c),
       ISBLANK(CpfPep__c),
       ISBLANK(Participacao__c),
       ISPICKVAL(GrauParentescoPep__c,&quot;&quot;)
    )
)</errorConditionFormula>
    <errorMessage>Para este tipo de beneficiário preencher o nome, cpf, participação e grau de parentesco (PEP)</errorMessage>
</ValidationRule>