workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoProposta__c/validationRules/ValidacaoGaruParentesco.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoGaruParentesco</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL( TipoBeneficiario__c , &quot;Nome do beneficiário&quot;), 
OR( 
ISPICKVAL(GrauParentesco__c,&quot;&quot;) 
) 
)</errorConditionFormula>
    <errorDisplayField>GrauParentesco__c</errorDisplayField>
    <errorMessage>Grau de parentesco não informado</errorMessage>
</ValidationRule>