workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoProposta__c/validationRules/ValidacaoPep.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoPep</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
ISPICKVAL( TipoBeneficiario__c , &quot;Nome do beneficiário&quot;), 
OR( 
ISPICKVAL( Pep__c ,&quot;&quot;) 
) 
)</errorConditionFormula>
    <errorDisplayField>Pep__c</errorDisplayField>
    <errorMessage>Pep não informado</errorMessage>
</ValidationRule>