workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoProposta__c/validationRules/ValidacaoTipoBeneficiario.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoTipoBeneficiario</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL( TipoBeneficiario__c , &quot;&quot;), true, false)</errorConditionFormula>
    <errorDisplayField>TipoBeneficiario__c</errorDisplayField>
    <errorMessage>Tipo de beneficiário não informado</errorMessage>
</ValidationRule>