workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoProposta__c/validationRules/ValidarPreenchimentoImprimirCertificado.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarPreenchimentoImprimirCertificado</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(TipoBeneficiario__c, &quot;Conforme artigo 792 do código civil&quot;),
    ImprimirCertificadoSeguro__c
)</errorConditionFormula>
    <errorMessage>Este campo não pode ser preenchido para esse tipo de beneficiário</errorMessage>
</ValidationRule>