workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoProposta__c/validationRules/ValidarPreenchimentoParticipacao.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarPreenchimentoParticipacao</fullName>
    <active>false</active>
    <errorConditionFormula>IF(ISPICKVAL(TipoBeneficiario__c, &quot;Conforme artigo 792 do código civil&quot;) &amp;&amp;  !ISNULL(Participacao__c ) , true, false)</errorConditionFormula>
    <errorDisplayField>Participacao__c</errorDisplayField>
    <errorMessage>Este campo não pode ser preenchido para esse tipo de beneficiário</errorMessage>
</ValidationRule>