workspace-sf/force-app/main/default/objects/BeneficiarioSeguradoProposta__c/validationRules/ValidarPreenchimentoParticipacao_informa.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarPreenchimentoParticipacao_informa</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL(TipoBeneficiario__c, &quot;Nome do beneficiário&quot;) &amp;&amp;  ISNULL(Participacao__c ) , true, false)</errorConditionFormula>
    <errorDisplayField>Participacao__c</errorDisplayField>
    <errorMessage>Percentual de participação não informado</errorMessage>
</ValidationRule>